--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images\десерты\блюдо 4\maxresdefault-edited-free (carve.photos).png" alt="">
+                  <img src="images\десерты\блюдо 4\блюдо 4\maxresdefault-edited-free (carve.photos).png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
