--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images\десерты\блюдо 5\2065509_72725-710x550x-no-bg-preview (carve.photos).png" alt="">
+                  <img src="images\десерты\блюдо 5\ блюдо 5\2065509_72725-710x550x-no-bg-preview (carve.photos).png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
