--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images\десерты\блюдо 5\2065509_72725-710x550x-no-bg-preview (carve.photos).png" alt="пппппррр">
+                  <img src="images/десерты/блюдо 5/блюдо 5/2065509_72725-710x550x-no-bg-preview (carve.photos).png" alt="пппппррр">
                 </div>
                 <div class="detail-box">
                   <h5>
